{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 20,
  "lineage": "d99ddb3b-81c7-25da-a310-e38df704d5a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cyber-nat-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-092a80c8e5461e2fa",
            "public_dns": "ec2-3-18-176-67.us-east-2.compute.amazonaws.com",
            "public_ip": "3.18.176.67",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cyber-master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-2:125724823277:instance/i-0feeca2a640f4cc23",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0feeca2a640f4cc23",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cyber",
            "monitoring": false,
            "primary_network_interface_id": "eni-012beddbc498d11aa",
            "private_dns": "ip-10-0-0-10.us-east-2.compute.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-18-216-156-218.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.156.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 300,
                "volume_id": "vol-0fe84737a5f4317f5",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-07a7b965d51c8573f",
            "tags": {
              "Name": "Cyber Master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06534ab386d4f02f3"
            ]
          },
          "depends_on": [
            "aws_key_pair.cyber-key",
            "aws_security_group.cyber-public-sg",
            "aws_subnet.cyber-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cyber-node1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-2:125724823277:instance/i-06f066e864e31b316",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06f066e864e31b316",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cyber",
            "monitoring": false,
            "primary_network_interface_id": "eni-0cfb4d87b2880910f",
            "private_dns": "ip-10-0-1-10.us-east-2.compute.internal",
            "private_ip": "10.0.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 300,
                "volume_id": "vol-03490804a40a10b88",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0a4f9dc5bdc2b6102",
            "tags": {
              "Name": "Cyber Node 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08674b2404ccc104b"
            ]
          },
          "depends_on": [
            "aws_key_pair.cyber-key",
            "aws_security_group.cyber-private-sg",
            "aws_subnet.cyber-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cyber-node2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-2:125724823277:instance/i-0779b90410a9d914d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0779b90410a9d914d",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cyber",
            "monitoring": false,
            "primary_network_interface_id": "eni-031c7fb526de6d3ba",
            "private_dns": "ip-10-0-1-11.us-east-2.compute.internal",
            "private_ip": "10.0.1.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 300,
                "volume_id": "vol-065ce410efe794345",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0a4f9dc5bdc2b6102",
            "tags": {
              "Name": "Cyber Node 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08674b2404ccc104b"
            ]
          },
          "depends_on": [
            "aws_key_pair.cyber-key",
            "aws_security_group.cyber-private-sg",
            "aws_subnet.cyber-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cyber-node3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-2:125724823277:instance/i-03e0844019e76e6d8",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03e0844019e76e6d8",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cyber",
            "monitoring": false,
            "primary_network_interface_id": "eni-091c61c74e0b8e85a",
            "private_dns": "ip-10-0-1-12.us-east-2.compute.internal",
            "private_ip": "10.0.1.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 300,
                "volume_id": "vol-0291b93d62f40d99b",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0a4f9dc5bdc2b6102",
            "tags": {
              "Name": "Cyber Node 3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08674b2404ccc104b"
            ]
          },
          "depends_on": [
            "aws_key_pair.cyber-key",
            "aws_security_group.cyber-private-sg",
            "aws_subnet.cyber-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cyber-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ec6dfc65ae2f24ae",
            "owner_id": "125724823277",
            "tags": {
              "Name": "Cyber VPC IGW"
            },
            "vpc_id": "vpc-0a4089e0a756b611a"
          },
          "depends_on": [
            "aws_vpc.cyber-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cyber-nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-092a80c8e5461e2fa",
            "id": "nat-0e4e46c672acf0f3a",
            "network_interface_id": "eni-026f1018a5ff57093",
            "private_ip": "10.0.0.229",
            "public_ip": "3.18.176.67",
            "subnet_id": "subnet-07a7b965d51c8573f",
            "tags": {
              "Name": "Cyber NAT GW"
            }
          },
          "depends_on": [
            "aws_eip.cyber-nat-eip",
            "aws_internet_gateway.cyber-gw",
            "aws_subnet.cyber-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cyber-private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00286800fc84efadf",
            "owner_id": "125724823277",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0e4e46c672acf0f3a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Cyber Private Subnet RT"
            },
            "vpc_id": "vpc-0a4089e0a756b611a"
          },
          "depends_on": [
            "aws_nat_gateway.cyber-nat-gw",
            "aws_vpc.cyber-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cyber-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-003c40309419db3e3",
            "owner_id": "125724823277",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec6dfc65ae2f24ae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Cyber Public Subnet RT"
            },
            "vpc_id": "vpc-0a4089e0a756b611a"
          },
          "depends_on": [
            "aws_internet_gateway.cyber-gw",
            "aws_vpc.cyber-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cyber-private-rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b867dd4f7b6f2e3d",
            "route_table_id": "rtb-00286800fc84efadf",
            "subnet_id": "subnet-0a4f9dc5bdc2b6102"
          },
          "depends_on": [
            "aws_route_table.cyber-private-rt",
            "aws_subnet.cyber-private-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cyber-public-rta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0804b29b4ad4c145c",
            "route_table_id": "rtb-003c40309419db3e3",
            "subnet_id": "subnet-07a7b965d51c8573f"
          },
          "depends_on": [
            "aws_route_table.cyber-public-rt",
            "aws_subnet.cyber-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cyber-private-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125724823277:security-group/sg-08674b2404ccc104b",
            "description": "Allow SSH traffic from public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08674b2404ccc104b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "cyber-private-sg",
            "name_prefix": null,
            "owner_id": "125724823277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Cyber Private SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4089e0a756b611a"
          },
          "depends_on": [
            "aws_vpc.cyber-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cyber-public-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125724823277:security-group/sg-06534ab386d4f02f3",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06534ab386d4f02f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cyber-public-sg",
            "name_prefix": null,
            "owner_id": "125724823277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Cyber Public SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4089e0a756b611a"
          },
          "depends_on": [
            "aws_vpc.cyber-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cyber-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125724823277:subnet/subnet-0a4f9dc5bdc2b6102",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a4f9dc5bdc2b6102",
            "map_public_ip_on_launch": false,
            "owner_id": "125724823277",
            "tags": {
              "Name": "Cyber Private Subnet"
            },
            "vpc_id": "vpc-0a4089e0a756b611a"
          },
          "depends_on": [
            "aws_vpc.cyber-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cyber-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125724823277:subnet/subnet-07a7b965d51c8573f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-07a7b965d51c8573f",
            "map_public_ip_on_launch": false,
            "owner_id": "125724823277",
            "tags": {
              "Name": "Cyber Public Subnet"
            },
            "vpc_id": "vpc-0a4089e0a756b611a"
          },
          "depends_on": [
            "aws_vpc.cyber-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cyber-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:125724823277:vpc/vpc-0a4089e0a756b611a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9be37849ab2ac80",
            "default_route_table_id": "rtb-05b9d24b27e9f19f6",
            "default_security_group_id": "sg-0f25dcee1dbb2f904",
            "dhcp_options_id": "dopt-41a49328",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a4089e0a756b611a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05b9d24b27e9f19f6",
            "owner_id": "125724823277",
            "tags": {
              "Name": "cyber-vpc"
            }
          }
        }
      ]
    }
  ]
}